<resources>
    <string name="app_name">SPŠE iCanteen</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">SPŠE iCanteen</string>
    <string name="nav_header_subtitle" translatable="false">-</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="service_name">Order download</string>
    <string name="onBack">You need to finish first setup!</string>
    <string name="noFoodData">Meal: No data!</string>
    <string name="noSoupData">Soup: No data!</string>
    <string name="noFoodPrefix">"Meal: "</string>
    <string name="notYetUpdated">never</string>
    <string name="text11" translatable="false">10:00</string>
    <string name="text1130" translatable="false">11:00</string>
    <string name="text12" translatable="false">12:00</string>
    <string name="text1230" translatable="false">13:00</string>
    <string name="menu_widget" translatable="false">Widget</string>
    <string name="channel_name" translatable="false">SPŠEiCanteen channel</string>
    <string name="action_refresh">Refresh</string>
    <string name="notLoggedIn">Not logged in</string>
    <string name="noSoupPrefix">"Soup: "</string>
    <string name="titleToday">Today:</string>
    <string name="titleTomorrow">Tomorrow:</string>
    <string name="title2Tomorrow">Day after tomorrow:</string>
    <string name="noPopis">No orders</string>
    <string name="lastUpdated">Last updated:</string>
    <string name="stravaEmpty">Server SPŠE is not responding</string>
    <string name="loadingFoodInJsonError">Wrong login data</string>
    <string name="unknownError">Unknown error</string>
    <string name="internetError">Can\'t connect to internet</string>
    <string name="action_updating">Refreshing…</string>
    <string name="autoOrderDisabled">Function disabled</string>
    <string name="autoOrderFood1">Automatically order meal 1</string>
    <string name="autoOrderFood2">Automatically order meal 2</string>
    <string name="autoOrderFood3">Automatically order meal 3</string>
    <string name="autoOrderToast0">Disabled</string>
    <string name="autoOrderToast1">Now ordering 1</string>
    <string name="autoOrderToast2">Now ordering 2</string>
    <string name="autoOrderToast3">Now ordering 3</string>
    <string name="ordered_today">"Today's order: "</string>
    <string name="autoOrdered">"Automatically ordered on "</string>
    <string name="autoOrderedDescr">"Was automatically ordered "</string>
    <string name="welcomeTOS">While using this app you agree to <a href="https://jidlo.pihrt.com/tos/index.php">terms of service</a></string>
    <string name="aboutWelcome">This application was created in order to simplify the lives of students of the Secondary Vocational School of Electrical Engineering in Pilsen when ordering meals. It has happened to me several times that I forgot to order and then I was hungry. I\'ve also added a few extra features like notifications or a widget to keep track of your lunches.\nI hope that the application will serve you well and I will be happy for any comments.</string>
    <string name="aboutOpenStore">Review app</string>
    <string name="aboutAuthor">Author: Martin Pihrt</string>
    <string name="aboutTesters">Testers: Vítek Fikrle, Marek Köcher and Martin Hošek</string>
    <string name="menu_objednavky">My orders</string>
    <string name="menu_notif">Notifications</string>
    <string name="menu_objednej">Auto ordering</string>
    <string name="menu_orderlist">Order list</string>
    <string name="menu_ordering">Food ordering</string>
    <string name="menu_user">User settings</string>
    <string name="menu_infobar">Information</string>
    <string name="menu_info">About app</string>
    <string name="ordering_noOrdered">Not ordered</string>
    <string name="lgn_change_title">New user</string>
    <string name="lgn_btn_clear">Forget user</string>
    <string name="field_blank">Fields cannot be empty!</string>
    <string name="field_saved">Saved</string>
    <string name="field_clear">User deleted</string>
    <string name="lgn_curr_pre">Active user:</string>
    <string name="lgn_field_name">Name</string>
    <string name="lgn_field_pwd">Password</string>
    <string name="lgn_btn_save">Save and login</string>
    <string name="lgn_btn_login">Log in</string>
    <string name="welcome1_title">Welcome!</string>
    <string name="welcome2_title">Functions</string>
    <string name="welcome3_title">Almost there!</string>
    <string name="autoOrderHint">THIS FUNCTION IS NOT STABLE AND MAY NOT WORK! USE IT AT YOUR OWN RISK! <br/> If you select the auto-order feature, existing orders will not be canceled. The application automatically orders lunch only if it is not ordered for the day. It will auto-order 4 days advanced.</string>
    <string name="welcome3_description">You must log in to your school account to use the application. (The application doesn\'t share the data with anyone and uses it purely for functionality.)</string>
    <string name="welcome2_description">The application automatically orders meals for you, sends you a lunch notification, shows you what you have today and tomorrow for lunch on the home screen and maybe much more in the future! The application needs Internet access to download ordered meals.</string>
    <string name="welcome1_description">Thanks for downloading the application that will make your life easier! If it serves you well, I will be happy for the review. I will continue to update the application and add more features to it. Swipe left to continue…</string>
    <string name="widgetFragment_title">Adding widget</string>
    <string name="widgetFragment_content">To add a widget, hold your finger on the device\'s desktop, select the widget, and select the SPŠE iCanteen widget.\nThe widget displays food and soup for the current day.\nThe widget updates automatically after one hour.</string>
    <string name="add_widget">Add widget</string>
    <string name="channel_description">Order notifications</string>
    <string name="notif_newFood">Notify new meals</string>
    <string name="notif_newOrder">Notify auto ordered meals</string>
    <string name="notif_noIdData" />
    <string name="error">An error has occurred</string>
    <string name="noInternet">You need to be connected to Internet to update orders!</string>
    <string name="lastUpdatedWTitle">Updated: never</string>
    <string name="notifInfo">After enabling the function, a notification with the ordered food will arrive at the selected time. This also applies to automatic orders.</string>
    <string name="viewpwd" translatable="false">Show password</string>
    <string name="secretDis" translatable="false">Secret disabled</string>
    <string name="secretEn" translatable="false">Secret enabled</string>
    <string name="ordering_make" > was ordered.</string>
    <string name="ordering_reorder" > was reordered.</string>
    <string name="ordering_delete" > was deleted.</string>
    <string name="beta_notice">This feature is still under development and some features may not work. Thank you for understanding</string>
    <string name="beta_ok" translatable="false">OK</string>
</resources>
