<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="cz.pihrtm.spseicanteen.ui.home.HomeFragment"
        android:label="@string/menu_objednavky"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="cz.pihrtm.spseicanteen.ui.gallery.GalleryFragment"
        android:label="@string/menu_notif"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="cz.pihrtm.spseicanteen.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_objednej"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_user"
        android:name="cz.pihrtm.spseicanteen.ui.slideshow.UserFragment"
        android:label="@string/menu_user"
        tools:layout="@layout/fragment_user" />
</navigation>