<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/side_nav_bar"
    android:padding="@dimen/widget_margin"
    android:theme="@style/ThemeOverlay.SPŠEICanteen.AppWidgetContainer"
    >


    <TextView
        android:id="@+id/widgetTodayTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/noFoodData"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/widgetSoupTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/widgetTodayTitle"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/noSoupData"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/widgetErrorTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/widgetSoupTitle"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/unknownError"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/holo_red_light" />
</RelativeLayout>